[package]
name = "hookedmap"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
arc-swap = "1.5.1"
chrono = "0.4.22"
futures-util = "0.3.24"
geo = { version = "0.23.0", features = ["use-serde"] }
geo-raycasting = "0.3.0"
hyper = { version = "0.14.20", features = ["http1", "server", "stream", "tcp"] }
mysql_async = "0.31.0"
mysql_common = { version = "0.29.1", features = ["chrono"] }
once_cell = "1.15.0"
rocketmap-entities = { git = "https://github.com/nappa85/rocketmap-entities.git" }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tokio = { version = "1.21.1", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "time", "sync", "parking_lot"] }
