[package]
name = "hookedmap"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
arc-swap = "1.6.0"
chrono = "0.4.23"
futures-util = "0.3.25"
geo = { version = "0.23.1", features = ["use-serde"] }
geo-raycasting = "0.3.0"
hyper = { version = "0.14.23", features = ["http1", "server", "stream", "tcp"] }
mysql_async = "0.31.2"
mysql_common = { version = "0.29.2", features = ["chrono"] }
once_cell = "1.17.0"
rocketmap-entities = { git = "https://github.com/nappa85/rocketmap-entities.git" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
toml = "0.5.10"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tokio = { version = "1.24.1", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "time", "sync", "parking_lot"] }
