[package]
name = "hookedmap"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
arc-swap = "1.7.1"
chrono = "0.4.37"
futures-util = "0.3.30"
geo = { version = "0.23.1", features = ["use-serde"] }
geo-raycasting = "0.3.0"
hyper = { version = "0.14.28", features = ["http1", "server", "stream", "tcp"] }
mysql_async = { version = "0.34.1", features = ["chrono"] }
once_cell = "1.19.0"
rocketmap-entities = { git = "https://github.com/nappa85/rocketmap-entities.git" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.37.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "time", "sync", "parking_lot"] }
